---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    - 
  Changes:
    - 
  Bugfixes:
    - Fixed a crash with infinite values in certain modded situations

---------------------------------------------------------------------------------------------------
Version: 0.18.10
Date: 04. 04. 2020
  Features:
    - Shift-clicking when changing the machine for a recipe now sets that machine as the default
  Changes:
    - Updated the remote interface for Recipe Book to support its new version

---------------------------------------------------------------------------------------------------
Version: 0.18.9
Date: 29. 03. 2020
  Changes:
    - Added exact numbers to the utility dialog machine/module tooltips
  Bugfixes:
    - Fixed a calculation issue where byproducts where not being used up by recipes on subfloors

---------------------------------------------------------------------------------------------------
Version: 0.18.8
Date: 16. 03. 2020
  Bugfixes:
    - Fixed a crash when left-clicking a top level byproduct

---------------------------------------------------------------------------------------------------
Version: 0.18.7
Date: 10. 03. 2020
  Features:
    - Added a preference that allows you to enable additional production table columns, such as pollution info and comment fields
    - Added a preference that allows you to select an action when alt-clicking on recipes or items. You can choose between opening them in FNEI, WIIRUF or Recipe Book.
    - Added rate limiting to most interface interactions, improving performance and avoiding crashes in high-latency multiplayer situations
    - Added a keyboard shortcut to refocus the product picker searchfield
    - Added some more warning messages when an action couldn't be executed
  Changes:
    - Created a centralized localisation project. If you want to contribute, take a look at this mod's Github page.